src/objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <globalPicklist>Assignment_Type</globalPicklist>
        <label>Assignment Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>IF(
  ISBLANK(Rate_Specific_Effective_Date__c),
  Agreement__r.Effective_Date__c,
  Rate_Specific_Effective_Date__c
)</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Month__c</fullName>
        <label>Hours Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Week__c</fullName>
        <label>Hours Per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Monthly_Rate__c</fullName>
        <label>Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks__c</fullName>
        <label>Number of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Specific_Effective_Date__c</fullName>
        <inlineHelpText>By default, all Rates have the same Effective Date and Valid Through date as their Agreement. If this Rate is bound by a date range that is a subset of the overall Agreement date range, specify that Rate-specific date range here.</inlineHelpText>
        <label>Rate Specific Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Specific_Valid_Through__c</fullName>
        <inlineHelpText>By default, all Rates have the same Effective Date and Valid Through date as their Agreement. If this Rate is bound by a date range that is a subset of the overall Agreement date range, specify that Rate-specific date range here.</inlineHelpText>
        <label>Rate Specific Valid Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retainer_Sequence_Number__c</fullName>
        <inlineHelpText>An automatically generated sequence for the Retainer rates that helps differentiate them from one another on a given Agreement</inlineHelpText>
        <label>Retainer Sequence Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <globalPicklist>Role</globalPicklist>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <inlineHelpText>A unique identifier that prevents more than one Retained Capacity or Time &amp; Materials Rate from being assigned to the same Agreement</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_Through__c</fullName>
        <formula>IF(
  ISBLANK(Rate_Specific_Valid_Through__c),
  Agreement__r.Valid_Through__c,
  Rate_Specific_Valid_Through__c
)</formula>
        <label>Valid Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Rate__c</fullName>
        <label>Weekly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement__c</columns>
        <columns>Role__c</columns>
        <columns>Assignment_Type__c</columns>
        <columns>Hours_Per_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <recordTypes>
        <fullName>Named_Resource_Rate</fullName>
        <active>true</active>
        <description>A Rate based on a Named Resource, charged to the client at a predetermined cost, for a certain number of months or weeks</description>
        <label>Named Resource Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retained_Capacity_Rate</fullName>
        <active>true</active>
        <description>A Rate based upon a &quot;use it or lose it&quot; pool of hours of a particular type, billed to the customer in full regardless of usage</description>
        <label>Retained Capacity Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Materials_Rate</fullName>
        <active>true</active>
        <description>A Rate based upon an hourly rate, charged to the client as actual time worked</description>
        <label>Time &amp; Materials Rate</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ensure_Rate_Specific_Dates_Are_A_Subset</fullName>
        <active>true</active>
        <description>Ensures that the Rate specific date range, if provided, is a subset of the Agreement date range</description>
        <errorConditionFormula>OR(
  Rate_Specific_Effective_Date__c &lt; Agreement__r.Effective_Date__c,
  Rate_Specific_Effective_Date__c &gt; Agreement__r.Valid_Through__c,
  Rate_Specific_Valid_Through__c &lt; Agreement__r.Effective_Date__c,
  Rate_Specific_Valid_Through__c &gt; Agreement__r.Valid_Through__c
)</errorConditionFormula>
        <errorMessage>If you specify a date range for this Rate, it must be a subset of the Agreement&apos;s date range.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_Specific_Dates_Are_All_Or_Nothing</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  AND(
   ISBLANK(Rate_Specific_Effective_Date__c),
   NOT(ISBLANK(Rate_Specific_Valid_Through__c))
  ),
  AND(
   NOT(ISBLANK(Rate_Specific_Effective_Date__c)),
   ISBLANK(Rate_Specific_Valid_Through__c)
  )
)</errorConditionFormula>
        <errorMessage>If you&apos;re going to set a Rate specific date range, you must provide both an Effective Date and Valid Through date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Through_Must_Be_GT_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Valid_Through__c &lt;= Effective_Date__c</errorConditionFormula>
        <errorMessage>The Valid Through date must be greater than the Effective Date</errorMessage>
    </validationRules>
</CustomObject>